tests/invalid/Template_Invalid_7.whiley
function f<T>(T x) -> (T y):
    return x+1
